# harness

./: .gitignore  .precommit-audit.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN-VERIFY.md  DESIGN.md  INSTALL.ja.md  INSTALL.md  Makefile  README.ja.md  README.md  SECURITY.md  beacon.example.toml  deny.toml  gauge.example.toml  release-plz.toml  reviewgate.example.toml  session-insights.example.toml  specguard.example.toml  specguard.toml  stuckguard.example.toml
.compass/: charter.md
crates/autoflow/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/autoflow/.claude-plugin/: plugin.json
crates/autoflow/hooks/: hooks.json
crates/autoflow/src/: backlog.rs  compass.rs  condukt.rs  config.rs  insights.rs  lock.rs  main.rs  state.rs
crates/autoflow/tests/: integration.rs
crates/backlog/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  plugin.toml
crates/backlog/.claude-plugin/: plugin.json
crates/backlog/src/: config.rs  install.rs  lock.rs  main.rs  store.rs  task.rs
crates/backlog/tests/: integration.rs
crates/beacon/: CHANGELOG.md  Cargo.toml  Makefile  README.ja.md  README.md
crates/beacon/.claude-plugin/: plugin.json
crates/beacon/hooks/: hooks.json
crates/beacon/src/: config.rs  install.rs  main.rs  model.rs  notify.rs  transcript.rs
crates/beacon/tests/: integration.rs
crates/blastguard/: CHANGELOG.md  Cargo.toml  Makefile  README.ja.md  README.md
crates/blastguard/.claude-plugin/: plugin.json
crates/blastguard/hooks/: hooks.json
crates/blastguard/src/: detect.rs  exclude.rs  hookio.rs  lib.rs  main.rs  model.rs
crates/blastguard/tests/: integration.rs
crates/budgetguard/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  budgetguard.example.toml
crates/budgetguard/.claude-plugin/: plugin.json
crates/budgetguard/hooks/: hooks.json
crates/budgetguard/src/: config.rs  gate.rs  install.rs  lock.rs  main.rs  state.rs
crates/budgetguard/tests/: integration.rs
crates/compass/: CHANGELOG.md  Cargo.toml  DESIGN.md  README.ja.md  README.md
crates/compass/.claude-plugin/: plugin.json
crates/compass/hooks/: hooks.json
crates/compass/scripts/: build-plugin-bin.sh
crates/compass/src/: breadcrumb.rs  carve.rs  charter.rs  config.rs  discovery.rs  freshness.rs  gap.rs  gates.rs  gather.rs  main.rs  opportunity.rs  outcome.rs  route.rs
crates/compass/tests/: discovery.rs  integration.rs
crates/condukt/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/condukt/.claude-plugin/: plugin.json
crates/condukt/agents/: condukt-interpreter.md  condukt-researcher.md  condukt-verifier.md  condukt-worker.md
crates/condukt/docs/: context-flow.ja.md  github-issues-conflict-design.md  internals.ja.md
crates/condukt/hooks/: hooks.json
crates/condukt/scripts/: build-plugin-bin.sh  sync-plugin-assets.sh
crates/condukt/src/: checkpoint.rs  config.rs  consensus.rs  editgate.rs  gatelog.rs  install.rs  lock.rs  main.rs  model.rs  oracle.rs  policy.rs  pr.rs  replan.rs  schedule.rs  state.rs  status.rs  store.rs  verify.rs  worktree.rs
crates/condukt/tests/: autonomy_invariant.rs  checkpoint_cli.rs  edit_gate_hook.rs  fp_oracle_e2e.rs  policy_cli.rs  replan_recovery_e2e.rs
crates/context-governor/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/context-governor/.claude-plugin/: plugin.json
crates/context-governor/docs/: coexistence-with-ctxrot.md
crates/context-governor/hooks/: hooks.json
crates/context-governor/scripts/: build-plugin-bin.sh
crates/context-governor/src/: backing.rs  handlers.rs  io.rs  ledger.rs  lib.rs  types.rs
crates/context-governor/tests/: context_governor_coexistence_with_ctxrot.rs  context_governor_hooks.rs
crates/ctxrot/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/ctxrot/.claude-plugin/: plugin.json
crates/ctxrot/eval/: run-recall.sh
crates/ctxrot/hooks/: hooks.json
crates/ctxrot/scripts/: build-plugin-bin.sh
crates/ctxrot/src/: config.rs  eval.rs  glob.rs  install.rs  loadset.rs  main.rs  metrics.rs  model.rs  store.rs  usage.rs
crates/curate/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/curate/.claude-plugin/: plugin.json
crates/curate/src/: derive.rs  main.rs  seed.rs
crates/curate/tests/: integration.rs
crates/daily/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/daily/.claude-plugin/: plugin.json
crates/daily/hooks/: hooks.json
crates/daily/src/: main.rs
crates/daily/tests/: integration.rs
crates/deepwiki/: CHANGELOG.md  Cargo.toml  Makefile  README.ja.md  README.md
crates/deepwiki/.claude-plugin/: plugin.json
crates/deepwiki/agents/: deepwiki-writer.md
crates/deepwiki/commands/: deepwiki.md
crates/deepwiki/src/: main.rs  scan.rs
crates/deepwiki/tests/: integration.rs
crates/difflog/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  difflog.example.toml
crates/donegate/: CHANGELOG.md  Cargo.toml  Makefile  README.ja.md  README.md  donegate.example.toml
crates/evalkit/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/flow/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/fugu-router/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  fugu-router.example.toml
crates/gauge/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/harness-core/: Cargo.toml  README.ja.md  README.md
crates/harness-status/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/hypothesis/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/integration-tests/: Cargo.toml
crates/mutategate/: Cargo.toml  README.ja.md  README.md
crates/playbook/: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.ja.md  README.md  playbook.example.toml
crates/precommit-audit/: CHANGELOG.md  Cargo.toml  Makefile  README.ja.md  README.md
crates/propguard/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  propguard.example.toml
crates/replaykit/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/reviewgate/: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
crates/run-book/: CHANGELOG.md  Cargo.toml  Makefile  README.ja.md  README.md  runbook.example.toml
(+461 files in other folders)
