[workspace]
resolver = "2"
members  = ["crates/*"]

[workspace.package]
rust-version = "1.82"     # is_none_or 使用のため（既存クレート）
edition      = "2021"
license      = "MIT"

# 共通依存はここに集約し、各クレートは段階的に `workspace = true` へ移行する。
# Phase A 時点では各クレートの [dependencies] はそのまま（移行は後続フェーズ）。
[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
regex      = "1"

# 同梱バイナリ用の最適化プロファイル。各メンバーが個別に持っていた同一の
# [profile.release] をここへ一元化（ワークスペースではルートのみ有効）。
[profile.release]
strip     = true
lto       = true
opt-level = "z"
