[workspace]
resolver = "2"
members  = ["crates/*"]
# Skill-only plugins (no Rust binary) live under crates/ as Claude Code plugins
# but are NOT Cargo crates, so the `crates/*` glob must skip them.
exclude  = ["crates/scout"]

[workspace.package]
rust-version = "1.82"     # is_none_or 使用のため（既存クレート）
edition      = "2021"
license      = "MIT"

# 共通依存はここに集約し、各クレートは段階的に `workspace = true` へ移行する。
# Phase A 時点では各クレートの [dependencies] はそのまま（移行は後続フェーズ）。
[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
regex      = "1"
anyhow     = "1"
toml       = "0.8"
chrono     = { version = "0.4", default-features = false, features = ["clock", "std"] }
tempfile   = "3"
sha2       = "0.10"

# 同梱バイナリ用の最適化プロファイル。各メンバーが個別に持っていた同一の
# [profile.release] をここへ一元化（ワークスペースではルートのみ有効）。
[profile.release]
strip     = true
lto       = true
opt-level = "z"
