[workspace]
# resolver "3" enables Cargo's MSRV-aware dependency resolution (and itself
# requires Rust >= 1.84, which our MSRV satisfies): with
# `incompatible-rust-versions = "fallback"` (its default), `cargo update` prefers
# dependency versions compatible with `workspace.package.rust-version` when a
# newer one would raise the floor. The MSRV is 1.85 because the current
# dependency surface (clap 4.6, indexmap 2.14, globset 0.4.18, proptest, …)
# requires `edition2024`, stabilized in Rust 1.85. The msrv.yml CI enforces this.
resolver = "3"
members  = ["crates/*"]
# Skill-only plugins (no Rust binary) live under crates/ as Claude Code plugins
# but are NOT Cargo crates, so the `crates/*` glob must skip them.
exclude  = ["crates/scout"]

[workspace.package]
rust-version = "1.85"     # 依存 (clap 4.6 / indexmap 2.14 / globset 0.4.18 等) が edition2024 を要求するため。資格的下限は msrv.yml が保証。
edition      = "2021"
license      = "MIT"

# 共通依存はここに集約し、各クレートは段階的に `workspace = true` へ移行する。
# Phase A 時点では各クレートの [dependencies] はそのまま（移行は後続フェーズ）。
[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
regex      = "1"
anyhow     = "1"
toml       = "1.1"
chrono     = { version = "0.4", default-features = false, features = ["clock", "std"] }
tempfile   = "3"
sha2       = "0.10"

# 同梱バイナリ用の最適化プロファイル。各メンバーが個別に持っていた同一の
# [profile.release] をここへ一元化（ワークスペースではルートのみ有効）。
[profile.release]
strip     = true
lto       = true
opt-level = "z"
# never-break-a-turn invariant: the exit-0-on-error guarantee rests on
# std::panic::catch_unwind in hook::run_hook and gate::run_guarded, which becomes
# a silent NO-OP under panic="abort". Pin "unwind" so a panic is caught and the
# turn still exits cleanly. harness-core has a #[cfg(not(panic = "unwind"))]
# compile_error! backstop guarding against this being changed.
panic     = "unwind"
