[package]
license.workspace = true
name = "autoflow"
version = "0.1.1"
edition = "2021"
description = "Session-end auto-flow: record + condukt continuation gate for Claude Code."

[[bin]]
name = "autoflow"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
