[package]
rust-version.workspace = true
license.workspace = true
name = "autoflow"
version = "0.1.1"
edition = "2021"
description = "Session-end auto-flow: record + condukt continuation gate for Claude Code."

[[bin]]
name = "autoflow"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }
