[package]
name = "backlog"
version = "0.1.0"
edition = "2021"
description = "Cross-project task queue with cycle-type tags for Claude Code."

[[bin]]
name = "backlog"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
