[package]
rust-version.workspace = true
license.workspace = true
name = "backlog"
version = "0.1.0"
edition = "2021"
description = "Cross-project task queue with cycle-type tags for Claude Code."

[[bin]]
name = "backlog"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
