[package]
name = "beacon"
version = "0.1.0"
edition = "2021"
description = "Desktop & webhook notifications for Claude Code. Stop and Notification hooks that ping you (macOS/Linux desktop, Slack, generic webhook, or a custom command) when a turn finishes or Claude needs your input."
license = "MIT"

[[bin]]
name = "beacon"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["clock"], default-features = false }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
