[package]
rust-version.workspace = true
name = "beacon"
version = "0.1.2"
edition = "2021"
description = "Desktop & webhook notifications for Claude Code. Stop and Notification hooks that ping you (macOS/Linux desktop, Slack, generic webhook, or a custom command) when a turn finishes or Claude needs your input."
license = "MIT"

[[bin]]
name = "beacon"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
