[package]
rust-version.workspace = true
name = "blastguard"
version = "0.1.0"
edition = "2021"
description = "PreToolUse hook that denies project-destroying Bash commands and file operations. Self-contained, subscription-native."
license = "MIT"

[[bin]]
name = "blastguard"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
globset = "0.4"
