[package]
name = "budgetguard"
version = "0.1.3"
edition = "2021"
description = "Real-time cost budget gate for Claude Code. On Stop it reads the session transcript, computes the USD cost, and blocks the turn if session or daily limits are exceeded — feeding the overage back so the agent winds down gracefully."
license = "MIT"

[[bin]]
name = "budgetguard"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["clock"], default-features = false }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
