[package]
name = "compass"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Goal re-grounding + next-move derivation upstream of condukt; subscription-native."
license = "MIT"

[[bin]]
name = "compass"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
