[package]
name = "compass"
version = "0.1.2"
edition = "2021"
rust-version = "1.82"
description = "Goal re-grounding + next-move derivation upstream of condukt; subscription-native."
license = "MIT"

[[bin]]
name = "compass"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
