[package]
name = "condukt"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "Deterministic orchestration engine for Claude Code: schedule parallel/serial task batches by file-conflict analysis, manage git worktree lifecycle, track run state and gate completion. Subscription-native (skill + agents + hooks, no API key)."
repository = "https://github.com/yukineko/condukt"

[[bin]]
name = "condukt"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
globset = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
