[package]
rust-version.workspace = true
name = "condukt"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Deterministic orchestration engine for Claude Code: schedule parallel/serial task batches by file-conflict analysis, manage git worktree lifecycle, track run state and gate completion. Subscription-native (skill + agents + hooks, no API key)."
repository = "https://github.com/yukineko/condukt"

[[bin]]
name = "condukt"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
blastguard = { path = "../blastguard" }
wait-timeout = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
regex = { workspace = true }
globset = "0.4"
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { version = "1", default-features = false, features = ["std"] }
serde_json = { workspace = true }
