[package]
name = "ctxrot"
version = "0.4.0"
edition = "2021"
# MSRV: `is_none_or` (store.rs/usage.rs) was stabilized in Rust 1.82.
rust-version = "1.82"
description = "A context-rot guard for Claude Code: detect, rescue, restore, and distill conversation context to fight attention decay in long sessions."
license = "MIT"

[[bin]]
name = "ctxrot"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
dirs = "5"
chrono = { version = "0.4", features = ["clock"], default-features = false }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
