[package]
name = "ctxrot"
version = "0.5.0"
edition = "2021"
# MSRV: `is_none_or` (store.rs/usage.rs) was stabilized in Rust 1.82.
rust-version.workspace = true
description = "A context-rot guard for Claude Code: detect, rescue, restore, and distill conversation context to fight attention decay in long sessions."
license = "MIT"

[[bin]]
name = "ctxrot"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
dirs = "6"
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
wait-timeout = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
