[package]
name = "curate"
version = "0.1.0"
edition = "2021"
description = "Promote fugu-router playbooks into versioned golden eval datasets for evalkit. Turns the append-only routing log into a curated, deduplicated holdout set: mechanical acceptance criteria become runnable golden cases, the rest become drafts for a human to fill. The supply side of the offline eval loop."
license = "MIT"

[[bin]]
name = "curate"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
