[package]
name = "daily"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Daily-once task runner for Claude Code SessionStart: runs cargo deny check once per calendar day."
license = "MIT"

[[bin]]
name = "daily"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = "5"

[dev-dependencies]
tempfile = { workspace = true }
