[package]
name = "deepwiki"
version = "0.1.0"
edition = "2021"
description = "Deterministic repo mapper for Claude Code's deepwiki plugin. Scans a repository into a structured map (languages, layout, entry points, key files) and tracks wiki freshness against git, so a subagent can generate and refresh an architecture wiki."
license = "MIT"

[[bin]]
name = "deepwiki"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["clock"], default-features = false }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
