[package]
rust-version.workspace = true
name = "deepwiki"
version = "0.1.1"
edition = "2021"
description = "Deterministic repo mapper for Claude Code's deepwiki plugin. Scans a repository into a structured map (languages, layout, entry points, key files) and tracks wiki freshness against git, so a subagent can generate and refresh an architecture wiki."
license = "MIT"

[[bin]]
name = "deepwiki"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
