[package]
rust-version.workspace = true
name = "difflog"
version = "0.1.0"
edition = "2021"
description = "Session diff-log for Claude Code: on SessionEnd, record a structured git diff summary (files changed, net insertions/deletions, changed symbols) and link it to the session's cost record. A /difflog skill can then generate a human-readable narrative from that summary."
license = "MIT"

[[bin]]
name = "difflog"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = { workspace = true }
