[package]
rust-version.workspace = true
name = "donegate"
version = "0.1.3"
edition = "2021"
description = "Completion-verification gate for Claude Code. On Stop it runs your acceptance commands as subprocesses; the agent can't declare done until every applicable check is green. Failures are fed back for an auto-fix loop."
license = "MIT"

[[bin]]
name = "donegate"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
globset = "0.4"
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
