[package]
name = "evalkit"
version = "0.1.0"
edition = "2021"
description = "Offline golden-regression eval harness for Claude Code plugins. Reads golden *.jsonl cases (file-content or CLI-output assertions) and exits non-zero when a prompt edit or CLI contract regresses — the offline sibling of condukt's online verifier, runnable as a CI gate with no API key."
license = "MIT"

[[bin]]
name = "evalkit"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
