[package]
name = "flow"
version = "0.1.1"
edition = "2021"
rust-version = "1.82"
description = "Unified source→executor driver: binds compass/backlog (task sources) to condukt (executor); subscription-native."
license = "MIT"

[[bin]]
name = "flow"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
