[package]
name = "flow"
version = "0.1.4"
edition = "2021"
rust-version.workspace = true
description = "Unified source→executor driver: binds compass/backlog (task sources) to condukt (executor); subscription-native."
license = "MIT"

[[bin]]
name = "flow"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
