[package]
license.workspace = true
name = "fugu-router"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fugu-router"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
