[package]
rust-version.workspace = true
license.workspace = true
name = "fugu-router"
version = "0.1.1"
edition = "2021"
description = "fugu-style per-model routing for Claude Code orchestration. Learns from past task outcomes (which Claude tier passed verification, at what cost) via lexical k-NN over a local JSONL episode store and picks the cheapest tier that historically clears similar work; feeds condukt's suggested_model. No API key, no embedding service."

[[bin]]
name = "fugu-router"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
