[package]
name = "gauge"
version = "0.1.0"
edition = "2021"
description = "Local LLMOps telemetry for Claude Code. A Stop hook that reads each session's transcript and records token usage, tool calls, latency, and cost to a local store — then reports it. No API key, no data leaves the machine."
license = "MIT"

[[bin]]
name = "gauge"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["clock"], default-features = false }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
