[package]
name = "harness-core"
version = "0.1.0"
edition = "2021"
# MSRV: `is_none_or` (store.rs) was stabilized in Rust 1.82.
rust-version = "1.82"
description = "Shared build-time infrastructure for the yukineko Claude Code harness plugins: hook I/O, transcript streaming, the note store (parallel-session-safe), config primitives, the metrics sink, and settings.json wiring."
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
dirs = "5"
chrono = { workspace = true }
anyhow = { workspace = true }
wait-timeout = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
