[package]
license.workspace = true
name = "harness-status"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "harness-status"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
