[package]
rust-version.workspace = true
license.workspace = true
name = "harness-status"
version = "0.1.0"
edition = "2021"
description = "Unified human-on-the-loop status dashboard for Claude Code. A /status command aggregates budgetguard's spend ledger, gauge's session records (recent sessions + cost), and taskprog's progress file into one view. Subscription-native (binary + command, no API key, no hooks)."

[[bin]]
name = "harness-status"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
