[package]
license.workspace = true
name = "hypothesis"
version = "0.1.0"
edition = "2021"
description = "PDO hypothesis lifecycle management for Claude Code — create, validate, and track discovery hypotheses."

[[bin]]
name = "hypothesis"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
