[package]
name = "playbook"
version = "0.1.0"
edition = "2021"
description = "Project knowledge retrieval + injection for Claude Code. A UserPromptSubmit hook that pulls the curated atomic notes relevant to your prompt and injects them (under a strict char budget), so conventions and gotchas resurface without you re-typing them."
license = "MIT"

[[bin]]
name = "playbook"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["clock"], default-features = false }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
