[package]
rust-version.workspace = true
name = "playbook"
version = "0.1.1"
edition = "2021"
description = "Project knowledge retrieval + injection for Claude Code. A UserPromptSubmit hook that pulls the curated atomic notes relevant to your prompt and injects them (under a strict char budget), so conventions and gotchas resurface without you re-typing them."
license = "MIT"

[[bin]]
name = "playbook"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = { workspace = true }
