[package]
name = "precommit-audit"
version = "0.1.3"
edition = "2021"
description = "Config-driven pre-commit static audit hook. Generic checks built in; project rules in a TOML file. Runs on Linux/macOS/Windows."
license = "MIT"

[[bin]]
name = "precommit-audit"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
globset = "0.4"
wait-timeout = "0.2"
