[package]
rust-version.workspace = true
name = "precommit-audit"
version = "0.1.4"
edition = "2021"
description = "Config-driven pre-commit static audit hook. Generic checks built in; project rules in a TOML file. Runs on Linux/macOS/Windows."
license = "MIT"

[[bin]]
name = "precommit-audit"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
globset = "0.4"
wait-timeout = "0.2"
