[package]
rust-version.workspace = true
name = "propguard"
version = "0.1.0"
edition = "2021"
description = "Property gate for Claude Code. On Stop it derives 3–5 semantic properties (invariants) from a task's done_criteria and checks the generated code against them before the agent can declare done: either by injecting a property checklist for the running agent to self-verify (no API key), or by spawning an independent checker command. It blocks when fewer than a threshold of the properties hold — going beyond 'concrete tests pass' to formalized invariants."
license = "MIT"

[[bin]]
name = "propguard"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
globset = "0.4"
wait-timeout = "0.2"
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = { workspace = true }
