[package]
rust-version.workspace = true
name = "replaykit"
version = "0.1.0"
edition = "2021"
description = "Trace→golden replay regression harness: distil tracekit-recorded condukt run traces into evalkit golden replay cases. The trajectory sibling of curate (playbook→golden). Pins a run's phase set, error count, and cost as a portable, self-verifying snapshot. Subscription-native (one bundled Rust binary, no API key)."
license = "MIT"

[[bin]]
name = "replaykit"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
