[package]
rust-version.workspace = true
name = "reviewgate"
version = "0.1.3"
edition = "2021"
description = "Code-review gate for Claude Code. On Stop it reviews the diff before the agent can declare done: either by injecting a review rubric for the running agent to self-review (no API key), or by spawning an independent reviewer command. Findings are fed back for a fix loop."
license = "MIT"

[[bin]]
name = "reviewgate"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
globset = "0.4"
wait-timeout = "0.2"
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = { workspace = true }
