[package]
rust-version.workspace = true
name = "runbook"
version = "0.1.0"
edition = "2021"
description = "Reusable procedure includes for Claude Code. A UserPromptSubmit hook that expands `!name` macros in a prompt into the matching repo-committed procedure (.runbook/<name>.md), so recurring workflows run the same way every time."
license = "MIT"

[[bin]]
name = "runbook"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = { workspace = true }
